# structshaper

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  README.md
SRC/App/: CMakeLists.txt
SRC/App/SRC/: main.cpp
SRC/App/SRC/Gui/: Gui.cpp  Gui.h
SRC/App/SRC/Gui/IconsLoader/: IconsLoader.cpp  IconsLoader.h
SRC/App/SRC/Gui/ImGuiHelpers/: Formatters.h  ImGuiHelpers.cpp  ImGuiHelpers.h
SRC/App/SRC/Gui/Native/: Linux.cpp  Windows.cpp
SRC/App/SRC/Gui/Views/: BaseView.cpp  BaseView.h  MessagesView.cpp  MessagesView.h  ProjectBackgroundView.cpp  ProjectBackgroundView.h  ProjectView.cpp  ProjectView.h  StructView.cpp  StructView.h  StructsListView.cpp  StructsListView.h
SRC/App/SRC/Gui/Views/Popups/: CodeGenerationPopup.cpp  CodeGenerationPopup.h  CreateProjectPopup.cpp  CreateProjectPopup.h  CreateStructPopup.cpp  CreateStructPopup.h  MessageBoxPopup.cpp  MessageBoxPopup.h  PopupView.cpp  PopupView.h  SelectProcessInterfacePopup.cpp  SelectProcessInterfacePopup.h  SelectProcessPopup.cpp  SelectProcessPopup.h  SettingsPopup.cpp  SettingsPopup.h
SRC/App/SRC/OptionsManager/: OptionsManager.cpp  OptionsManager.h
SRC/App/SRC/ProcessInterface/: ProcessInterface.cpp  ProcessInterface.h
SRC/App/SRC/ProjectManager/: ProjectManager.cpp  ProjectManager.h  Struct.cpp  Struct.h
SRC/App/SRC/ProjectManager/Types/: FieldBase.cpp  FieldBase.h  PodField.cpp  PodField.h  StructField.cpp  StructField.h  VecField.cpp  VecField.h
SRC/App/SRC/Queue/: Event.h
SRC/ProcessInterface/: CMakeLists.txt
SRC/ProcessInterface/ProcessInterfaceBase/: CMakeLists.txt
SRC/ProcessInterface/ProcessInterfaceBase/SRC/: ProcessInterfaceBase.cpp  ProcessInterfaceBase.h
SRC/ProcessInterface/ProcessInterface_UserMode/: CMakeLists.txt
SRC/ProcessInterface/ProcessInterface_UserMode/SRC/: ProcessInterface_UserMode_Linux.cpp  ProcessInterface_UserMode_Windows.cpp
SRC/ProcessInterface/ProcessInterface_UserMode/SRC/win/: nt_defs.cpp  nt_defs.h  syscall.asm
SRC/Shared/: CMakeLists.txt
SRC/Shared/SRC/: Defines.h
SRC/Shared/SRC/Logger/: Logger.h
SRC/Shared/SRC/Utils/: Fnv1.h  IDAllocator.h  ScopeGuard.h  StaticInstance.h  Utils.cpp  Utils.h  expected_result.h
